Дабавил картинки в проект

--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
         </div>
 
         <div class="hero__top-decor">
-            <img class="hero__decorate hero__decorate_1" src="./img/vectors/decorate1" alt="decorate">
-            <img class="hero__decorate hero__decorate_2" src="./img/vectors/decorate2" alt="decorate">
-            <img class="hero__decorate hero__decorate_3" src="./img/vectors/decorate3" alt="decorate">
-            <img class="hero__decorate hero__decorate_4" src="./img/vectors/decorate4" alt="decorate">
+            <img class="hero__decorate hero__decorate_1" src="./img/vectors/decorate1.svg" alt="decorate">
+            <img class="hero__decorate hero__decorate_2" src="./img/vectors/decorate2.svg" alt="decorate">
+            <img class="hero__decorate hero__decorate_3" src="./img/vectors/decorate3.svg" alt="decorate">
+            <img class="hero__decorate hero__decorate_4" src="./img/vectors/decorate4.svg" alt="decorate">
         </div>
 
         <section class="hero__animated-strip">
             <h3  class="hero__text">Викторина</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
             <h3  class="hero__text">Угадай число</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
             <h3  class="hero__text">Переверни текст</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
             <h3  class="hero__text">Простая арифметика</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
             <h3  class="hero__text">Камень, ножницы, бумага</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
             <h3  class="hero__text">Генератор случайных цветов</h3>
-            <img src="./img/" alt="star">
+            <img src="./img/Star.svg" alt="star">
         </section>
     </section>
 
@@ -133,10 +133,10 @@
         </section>
 
         <div class="bottom-decor">
-            <img class="bottom-decor__decorate bottom-decor__decorate__1" src="" alt="decorate">
-            <img class="bottom-decor__decorate bottom-decor__decorate__2" src="" alt="decorate">
-            <img class="bottom-decor__decorate bottom-decor__decorate__3" src="" alt="decorate">
-            <img class="bottom-decor__decorate bottom-decor__decorate__4" src="" alt="decorate">
+            <img class="bottom-decor__star bottom-decor__star__1" src="./img/vectors/Star1.svg" alt="decorate">
+            <img class="bottom-decor__star bottom-decor__star__2" src="./img/vectors/Star2.svg" alt="decorate">
+            <img class="bottom-decor__star bottom-decor__star__3" src="./img/vectors/Star3.svg" alt="decorate">
+            <img class="bottom-decor__star bottom-decor__star__4" src="./img/vectors/Star4.svg" alt="decorate">
         </div>
     </main>
 
