Кнопка "Поехали" теперь ведет к блоку "Об играх"; Исправил расположение текста в карточке с игрой №5; У текста "Игра №1-5" теперь есть фон

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="hero__content">
             <h1 class="hero__title">Добро пожаловать <br> на мой сайт мини-игр</h1>
             <p class="hero__info">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай <span>«Поехали!»</span> и <span>приступай.</span></p>
-            <button class="hero__btn">Поехали!</button>
+            <a href="#about"><button class="hero__btn">Поехали!</button></a>
             <img class="hero__decorate hero__decorate_1" src="./img/vectors/decorate1.svg" alt="decorate">
             <div class="hero__top-decor">
                 <img class="hero__decorate hero__decorate_2" src="./img/vectors/decorate2.svg" alt="decorate">
@@ -43,7 +43,7 @@
     <main class="main center">
         <section class="about">
             <div class="about__info">
-                <h2 class="about__title">Об играх</h2>
+                <h2 id="about" class="about__title">Об играх</h2>
                 <p class="about__text">В моей коллекции представлено 6 игр на разные темы. Игры несложные — в них может поиграть каждый.
                     Все игры доступны для пользования.</p>
             </div>
@@ -82,8 +82,8 @@
                         <article class="about__game">
                             <img class="about__img" src="./img/Game5.jpg" alt="Game №5">
                             <div class="about__text-box">
-                                <h4 class="about__name">Простая викторина</h4>
                                 <p class="about__number">Игра № 5</p>
+                                <h4 class="about__name">Простая викторина</h4>
                             </div>
                         </article>
                     </a>
