Внес пару изменений в адаптив и выполнил задание по JS

--- a/index.html
+++ b/index.html
@@ -174,5 +174,7 @@
     <footer class="footer">
         <p class="footer__text">Все права защищены.</p>
     </footer>
+
+    <script src="./js/hw-N1.js"></script>
 </body>
 </html>
