Выполнил задание №2 по JS

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
         <p class="footer__text">Все права защищены.</p>
     </footer>
 
-    <script src="./js/hw-N1.js"></script>
+    <!-- <script src="./js/hw-N1.js"></script> -->
+    <script src="./js/hw-N2.js"></script>    
 </body>
 </html>
